# Ctrl2D

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Utils.cpp  Utils.h  main.cpp
src/Application/: Ctrl2DApp.cpp  Ctrl2DApp.h  Ctrl2DEditor.cpp  Ctrl2DEditor.h
src/Components/: Components.h  Ellipse.cpp  Ellipse.h  EllipseFill.cpp  EllipseFill.h  EllipseOutline.cpp  EllipseOutline.h  Rectangle.cpp  Rectangle.h  RectangleFill.cpp  RectangleFill.h  RectangleOutline.cpp  RectangleOutline.h  Transform2D.cpp  Transform2D.h
src/Core/: Component.h  Ctrl2DApp.cpp  Ctrl2DApp.h  Editor.cpp  Editor.h  Event.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
src/ECS/: Component.h  GameObject.cpp  GameObject.h
src/ECS/Components/: Ellipse.cpp  Ellipse.h  Rectangle.cpp  Rectangle.h  Transform2D.cpp  Transform2D.h
